--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-role-based-authorization-example",
+  "name": "test-task",
   "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/cornflourblue/react-role-based-authorization-example.git"
+    "url": "https://github.com/WaleedBinKhalid123/test-task-maxima-frontend"
   },
   "license": "MIT",
   "scripts": {
